# rocket-shop-api

./: Cargo.toml  Rocket.toml
db/: myshop_data.sql  myshop_schema.sql
src/: main.rs  model.rs  routes.rs
