[package]
name = "shop-api-rocket"
version = "0.1.0"
authors = ["Roman Yakovlev <yakovlev.roman@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
postgres = "0.15"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "postgres_pool"]
